@@ -2,3 +2,4 @@ Port 80
 User nobody
 Group nobody
 DocumentRoot "/test/doc/root"
+ScriptAlias /test/cgi-bin/ /this/is/a/test/cgi-bin/
